--- a/javascript/ejohn/ejohn_call_apply.html
+++ b/javascript/ejohn/ejohn_call_apply.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
+  <head lang="en">
+    <meta charset="UTF-8" />
     <title></title>
-</head>
-<script>
-    function add(a,b)
-    {
-        alert(a+b);
+  </head>
+  <script>
+    function add(a, b) {
+      alert(a + b);
     }
-    function sub(a,b)
-    {
-        alert(a-b);
+    function sub(a, b) {
+      alert(a - b);
     }
 
-    add.call(sub,3,1);
-    sub.call(add,3,1);
-</script>
-<body>
-
-</body>
+    add.call(sub, 3, 1);
+    sub.call(add, 3, 1);
+  </script>
+  <body></body>
 </html>
