--- a/javascript/源码实现/promise.all.html
+++ b/javascript/源码实现/promise.all.html
@@ -11,29 +11,35 @@
           resolve("resolve");
         }, 1000);
       });
+      var p2 = new Promise((resolve, reject) => {
+        resolve('promise 2');
+      });
       p.then(data => {
         console.log(data);
+        return 'p2';
+      }).then(data1 => {
+        console.log(data1);
       });
 
-      Promise.all = promises => {
-        let arr = [];
-        i = 0;
-        function process(data, index, resolve) {
-          arr[index] = data;
-          i++;
-          if (i === arr.length) {
-            resolve(arr);
-          }
-        }
+      // Promise.all = promises => {
+      //   let arr = [];
+      //   i = 0;
+      //   function process(data, index, resolve) {
+      //     arr[index] = data;
+      //     i++;
+      //     if (i === arr.length) {
+      //       resolve(arr);
+      //     }
+      //   }
 
-        return new Promise((resolve, reject) => {
-          for (let i = 0; i < promises.length; i++) {
-            promises[i].then(data => {
-              process(data, i, resolve);
-            }, reject);
-          }
-        });
-      };
+      //   return new Promise((resolve, reject) => {
+      //     for (let i = 0; i < promises.length; i++) {
+      //       promises[i].then(data => {
+      //         process(data, i, resolve);
+      //       }, reject);
+      //     }
+      //   });
+      // };
     </script>
   </head>
   <body></body>
