--- a/算法与数据结构/sort/array/quick/sort.2way.html
+++ b/算法与数据结构/sort/array/quick/sort.2way.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script src="./../helper.js"></script>
-  <script src="./sort1.js"></script>
+  <script src="./sort.2way.js"></script>
   <script>
-    let n0 = 10;
-    let arr = SortTestHelper.generateRandamArray(n0, 0, n0);
-    SortTestHelper.testSort(arr, MergeSortBU)
+      let n0 = 10;
+      // let arr = [5,1,6,2,7,3,8,4,9,0];
+      let arr = SortTestHelper.generateRandamArray(n0, 0, n0);
+      SortTestHelper.testSort(arr, QuickSort2Way)  // default: 0.01416015625ms
   </script>
 </head>
 <body>
