--- a/算法与数据结构/sort/array/quick/sort.3way.html
+++ b/算法与数据结构/sort/array/quick/sort.3way.html
@@ -9,9 +9,9 @@
   <script src="./sort.3way.js"></script>
   <script>
       let n0 = 10;
-      let arr = [5,1,6,2,7,3,8,4,9,0];
+      let arr = [5,1, 5, 6, 5, 2, 5, 7, 5, 3,8,4,9,0];
       // let arr = SortTestHelper.generateRandamArray(n0, 0, n0);
-      SortTestHelper.testSort(arr, _QuickSort3Way)  // default: 0.01416015625ms
+      SortTestHelper.testSort(arr, QuickSort3Way)  // default: 0.01416015625ms
   </script>
 </head>
 <body>
