--- a/算法与数据结构/sort/array/merge/sort1.html
+++ b/算法与数据结构/sort/array/merge/sort1.html
@@ -10,7 +10,7 @@
   <script>
     let n0 = 10;
     let arr = SortTestHelper.generateRandamArray(n0, 0, n0);
-    SortTestHelper.testSort(arr, MergeSortBU)
+    SortTestHelper.testSort(arr, MergeSort)
   </script>
 </head>
 <body>
