--- a/算法与数据结构/sort/array/insertion/shell/接近已排序数组的希尔排序.html
+++ b/算法与数据结构/sort/array/insertion/shell/接近已排序数组的希尔排序.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>希尔排序</title>
-    <script src="./../../helper.js"></script>
+    <script src="./../../../helper.js"></script>
     <script src="./sort.js"></script>
     <script>
         let n0 = 10;
