--- a/算法与数据结构/sort/array/quick/sort.3way.html
+++ b/算法与数据结构/sort/array/quick/sort.3way.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="./../helper.js"></script>
+  <script src="./../../helper.js"></script>
   <script src="./sort.3way.js"></script>
   <script>
       let n0 = 10;
