二分搜索树补充

--- a/算法与数据结构/search/BST.html
+++ b/算法与数据结构/search/BST.html
@@ -18,6 +18,11 @@
     bst.insert(7, 'e');
     bst.insert(17, 'f');
     bst.insert(2, 'g');
+    bst.insert(11, 'h');
+    bst.insert(8, 'i');
+    bst.insert(18, 'j');
+    bst.insert(3, 'k');
+    bst.insert(13, 'l');
     console.log(bst.root);
     bst.leverOrder()
     // preOrder(bst.root)
