二分搜索树有关顺序性的问题解决

--- a/算法与数据结构/search/BST.html
+++ b/算法与数据结构/search/BST.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>BST</title>
-  <script src="./BST.js"></script>
+  <script src="./BST1.js"></script>
   <script src="./层序遍历/preOrder.js"></script>
 </head>
 <body>
@@ -23,8 +23,11 @@
     bst.insert(18, 'j');
     bst.insert(3, 'k');
     bst.insert(13, 'l');
+    // bst.insert(16, 'm');
+    // bst.insert(6, 'n');
+    // bst.insert(1, 'o');
     console.log(bst.root);
-    bst.leverOrder()
+    // bst.leverOrder()
     // preOrder(bst.root)
     // midOrder(bst.root)
     // postOrder(bst.root)
