改正AVL树逻辑，补充删除逻辑

--- a/算法与数据结构/search/tree/AVL/AVLBalanceTree.html
+++ b/算法与数据结构/search/tree/AVL/AVLBalanceTree.html
@@ -13,13 +13,13 @@
     avl.insert(1, 'c');
     avl.insert(3, 'd');
     avl.insert(7, 'e');
-    avl.insert(8, 'a');
-    avl.insert(10, 'f');
-    avl.insert(9, 'g');
-    // avl.insert(2, 'h');
-    // avl.insert(11, 'i');
-    // avl.insert(6, 'j');
-    // avl.insert(5, 'k');
+    avl.insert(8, 'f');
+    avl.insert(10, 'g');
+    avl.insert(9, 'h');
+    avl.insert(2, 'i');
+    avl.insert(11, 'j');
+    avl.insert(6, 'k');
+    avl.insert(5, 'l');
     console.log(avl);
   </script>
 </head>
